[gd_scene load_steps=14 format=3 uid="uid://b03evrtyj3ug4"]

[ext_resource type="Texture2D" uid="uid://chuuq4687815i" path="res://Resources/Sprites/Characters/Figure/FigureHead.png" id="1_b4tqu"]
[ext_resource type="Script" path="res://Scenes/Characters/Figure/figure.gd" id="1_rddm8"]
[ext_resource type="Texture2D" uid="uid://laxq4eaip0ef" path="res://Resources/Sprites/Characters/Figure/FigureBW.png" id="2_2rjca"]
[ext_resource type="PackedScene" uid="uid://bc2ilgeapotia" path="res://Scenes/Components/hurtbox.tscn" id="4_8atyw"]

[sub_resource type="Animation" id="Animation_yismd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualNode/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualNode/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_rx0ru"]
resource_name = "Spin"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualNode/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualNode/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_l210k"]
resource_name = "WalkDown"
length = 0.500008
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualNode/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualNode/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_75ifu"]
resource_name = "WalkLeft"
length = 0.500008
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualNode/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualNode/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_rjr5l"]
resource_name = "WalkRight"
length = 0.500008
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualNode/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualNode/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_hfhr6"]
resource_name = "WalkUp"
length = 0.500008
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualNode/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VisualNode/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_llbqb"]
_data = {
"RESET": SubResource("Animation_yismd"),
"Spin": SubResource("Animation_rx0ru"),
"WalkDown": SubResource("Animation_l210k"),
"WalkLeft": SubResource("Animation_75ifu"),
"WalkRight": SubResource("Animation_rjr5l"),
"WalkUp": SubResource("Animation_hfhr6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5s3cd"]
size = Vector2(12, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex47h"]
size = Vector2(20, 70)

[node name="Figure" type="CharacterBody2D"]
collision_layer = 6
motion_mode = 1
script = ExtResource("1_rddm8")
Player_Shot_speed = 15.0

[node name="VisualNode" type="Node2D" parent="."]

[node name="HeadSprite" type="Sprite2D" parent="VisualNode"]
position = Vector2(0, -40)
texture = ExtResource("1_b4tqu")
hframes = 32
frame = 8

[node name="BodySprite" type="Sprite2D" parent="VisualNode"]
modulate = Color(0.113725, 0.188235, 0.796078, 1)
position = Vector2(0, -40)
texture = ExtResource("2_2rjca")
hframes = 32
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_llbqb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("RectangleShape2D_5s3cd")

[node name="Aim" type="RayCast2D" parent="."]
position = Vector2(0, -44)
target_position = Vector2(1000, 0)

[node name="Hurtbox" parent="." node_paths=PackedStringArray("hurt_owner") instance=ExtResource("4_8atyw")]
collision_layer = 2
collision_mask = 0
hurt_owner = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -35)
shape = SubResource("RectangleShape2D_ex47h")
